# sparsify

./: .dockerignore  .gitignore  .venv  CONTRIBUTING.md  Dockerfile  LICENSE  PRD.md  README.md  TRD.md  VISION.md  debug_dtype.py  debug_proxy_assign.py  debug_proxy_call.py  fix_attr.py  fix_cache_size.py  fix_indent.py  fix_init.py  fix_print.py  fix_print_again.py  fix_proxy.py  fix_proxy_args.py  fix_sync.py  fix_syntax.py  install.sh  models  pyproject.toml  pytest.ini  revert_prints.py  test_32_layers.py  test_cache.py  test_call.py  test_concat.py  test_concat_speed.py  test_dict.py  test_dummy.py  test_engine.py  test_exact_assign.py  test_keys.py  test_keys2.py  test_layer_eval.py  (+26 more)
.github/: FUNDING.yml
docs/: README.md  community_issues.md  milestone-001-production-paging.md  roadmap-vision.md
experiments/: README.md  bench_decode.py  make_charts.py  qwen3_trace.json
research/: README.md
site/: Dockerfile  index.html
tests/: conftest.py  test_agent_tools.py  test_audio_and_attach.py  test_audit.py  test_browser_tools.py  test_cli.py  test_context_sizing.py  test_database.py  test_domain_locality.py  test_e2e_golden.py  test_experiments.py  test_final_verdict.py  test_gguf_reader.py  test_locality_analyzer.py  test_model_profiler.py  test_moe_prototype.py  test_ollama_compatibility.py  test_openai_tools_api.py  test_paging.py  test_prefetch_analyzer.py  test_production_inference.py  test_production_models.py  test_production_trace_collector.py  test_pytorch_paging.py  test_real_model.py  test_real_router_instrumentation.py  test_runtime.py  test_tasks.py  (+6 more)
(+108 files in other folders)
