[project]
name = "sparsify"
version = "0.2.0"
description = "Inference memory profiler and optimization research framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Sparsify Contributors" },
]

dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "psutil>=5.9",
    "gguf>=0.10",
    "safetensors>=0.4",
    "numpy>=1.26",
    "hf_transfer>=0.1.0",
    "prompt_toolkit>=3.0.0",
    "Markdown>=3.0.0",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.18",
    "mlx-lm>=0.20",
    "transformers>=4.50,<4.54",  # mlx-lm 0.31 uses string keys in AutoTokenizer.register
]
viz = [
    "matplotlib>=3.8",
    "plotly>=5.18",
]
browser = [
    "playwright>=1.40",  # after install: python -m playwright install chromium
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
all = [
    "sparsify[mlx,viz,dev]",
]

[project.scripts]
sparsify = "sparsify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sparsify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
